tests/ui/unsized/issue-75707.stderr
error[E0277]: the trait bound `MyCall: Callback` is not satisfied
  --> $DIR/issue-75707.rs:15:9
   |
LL |     f::<dyn Processing<Call = MyCall>>();
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Callback` is not implemented for `MyCall`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/issue-75707.rs:1:1
   |
LL | pub trait Callback {
   | ^^^^^^^^^^^^^^^^^^
note: required by a bound in `f`
  --> $DIR/issue-75707.rs:9:9
   |
LL | fn f<P: Processing + ?Sized>() {
   |         ^^^^^^^^^^ required by this bound in `f`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
